# magnav-research

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Manifest.toml  Project.toml  README.md  project_context.md  validate.jl  validate_offline.jl
MagNav.jl/: Manifest.toml
benchmark/: ARTIFACT_INTEGRATION.md  CONTRIBUTING.md  INTEGRATION_COMPLETE.md  LICENSE  Project.toml  bench_multi_segment.jl  bench_plots.jl  bench_tl_compare.jl  experiment_config.jl  generate_plots.jl  magnav_benchmark_notebook.jl  magnav_interactive.jl  nav_metrics.jl  show_results.jl  test_magnav_sim.jl  tl_injection.jl
data/: README.md
docs/: AIRCRAFT_INTERFERENCE_REMOVAL.md  DATA_SANITY_CHECK.md  DIURNAL_CORRECTION.md  EXECUTION_REPORT.md  EXPLORATION.md  RAW_MAG_PLOT.md  REPRODUCTION.md
gazebo/: run_test.sh
gazebo/models/x500_magnav/: model.config  model.sdf
gazebo/plugins/: CMakeLists.txt  MagneticMapPlugin.cc  README.md  export_ottawa_map.jl  magnetic_map_bridge.py  run_magnav_sim.sh
gazebo/results/: comparison_report.txt
gazebo/results/custom_tl_coef_20260222_004056/: coef_path.txt  metrics.txt
gazebo/results/custom_tl_coef_20260222_004512/: metrics.txt
gazebo/results/zero_coef_20260222_004040/: metrics.txt  ulg_path.txt
gazebo/results/zero_coef_20260222_004506/: coef_path.txt  metrics.txt  ulg_path.txt
gazebo/scripts/: box_mission.plan  extract_px4_log.py  generate_comparison.py  test_tl_on_sim.py  ulg_to_xyz.jl
gazebo/test_data/: my_coef.txt  zero_coef.txt
logs/: Flt1002_h5_keys.txt  shell_history.txt
magnav-benchmark/: .gitignore  BenchmarkFramework.jl  CHANGELOG.md  DOCUMENTATION_INDEX.md  QUICK_START.md  README.md  REFERENCE_CARD.md  SETUP_SUMMARY.md  START_HERE.md  bench_sensitivity.jl  custom_tl.jl  data_loader.jl  ekf_wrapper.jl  inspect_maps.jl  magnav_benchmark backup 1.jl  run_tests.jl  runtests.jl  segment_utils.jl  test_metrics_segments.jl  test_tl.jl  verify_artifact_system.jl
notebooks/: README.md
results/run_20260220_221033/: config.txt
results/run_20260220_221033/logs/: custom_tl_coef.txt
src/: tolles_lawson.jl
